# ros_openpose

./: CMakeLists.txt  README.md  dependencies.repos  package.xml
include/ros_openpose/: cameraReader.hpp
launch/: core.xml  multi_openpose.launch  openpose.launch  openpose.xml  remapper.xml
msg/: BodyPart.msg
scripts/: multi_openpose.py
src/: cameraReader.cpp  open_vico_openpose_node.cpp  rosOpenposeAsync.cpp
